<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        style="@style/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:id="@+id/timeButton"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"
        android:layout_weight="1"/>

    <Button
        style="@style/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_day"
        android:id="@+id/weekButton"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"
        android:layout_weight="1"/>

    <Button
        style="@style/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/day_temperature"
        android:id="@+id/dayButton"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"
        android:layout_weight="1"/>

    <Button
        style="@style/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/night_temperature"
        android:id="@+id/nightButton"
        android:layout_gravity="center"
        android:layout_marginBottom="-5dp"
        android:layout_weight="1"/>

    <ToggleButton
        style="@style/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/programToggle"
        android:textOff="Week Program Disabled"
        android:textOn="Week Program Enabled"
        android:layout_weight="1"
        android:checked="true"/>

</LinearLayout>