<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="end">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            style="@style/text"
            android:id="@+id/dayTitle"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <TextView
            style="@style/text"
            android:id="@+id/timeTitle"
            android:gravity="right"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <TextView
		style="@style/text"
        android:text="@string/current_temperature"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textSize="27sp"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7">

        <ImageView
            android:id="@+id/dayImage"
            android:src="@drawable/sun"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/day_temperature"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/temperatureCounter"
            style="@style/text"
            android:text="20.0 &#x2103;"
            android:layout_gravity="center"
            android:textSize="60sp"
            android:layout_weight="2"
            android:gravity="center|left"/>
      </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/subButton"
            android:src="@drawable/minus_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/sub"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <SeekBar
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"/>

        <ImageView
            android:id="@+id/addButton"
            android:src="@drawable/add_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/add"
            android:layout_weight="1"/>

    </LinearLayout>
    
    <Button
        style="@style/text"
        android:id="@+id/week"
        android:text="@string/week_overview"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1"/>

    <Button
        style="@style/text"
        android:id="@+id/settings"
        android:text="@string/settings"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1"/>

</LinearLayout>